--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Books Heaven</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100..400&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
